# compiler

./: README.md
Compiler2021/: .gitignore  CMakeLists.txt  main.cpp
Compiler2021/IR/: BasicBlock.cpp  BasicBlock.h  Function.cpp  Function.h  HIR.cpp  HIR.h  LIR.cpp  LIR.h  MIR.cpp  MIR.h  Module.cpp  Module.h  Type.cpp  Type.h  Value.cpp  Value.h
Compiler2021/codegen/: AssemblyGenerator.cpp  AssemblyGenerator.h  CodeSectionGenerator.cpp  CodeSectionGenerator.h  DataSectionGenerator.cpp  DataSectionGenerator.h  HIRAssemblyGenerator.cpp  HIRAssemblyGenerator.h  LIRAssemblyGenerator.cpp  LIRAssemblyGenerator.h  MIRAssemblyGenerator.cpp  MIRAssemblyGenerator.h
Compiler2021/frontend/: README.md
Compiler2021/frontend/errorhandle/: Error.cpp  Error.h  ErrorHandler.cpp  ErrorHandler.h
Compiler2021/frontend/generate/: HIRGenerator.cpp  HIRGenerator.h
Compiler2021/frontend/grammar_parse/: Gparser.cpp  Gparser.h  GrammarNode.cpp  GrammarNode.h
Compiler2021/frontend/tokenize/: Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
Compiler2021/pass/: Pass.cpp  Pass.h
Compiler2021/pass/analyze/: AnalyzeActivityPass.cpp  AnalyzeActivityPass.h  AnalyzeArrayAccessPass.cpp  AnalyzeArrayAccessPass.h  AnalyzeCFGPass.cpp  AnalyzeCFGPass.h  AnalyzeCallGraphPass.cpp  AnalyzeCallGraphPass.h  AnalyzeDAGPass.cpp  AnalyzeDAGPass.h  AnalyzeDataFlowPass.cpp  AnalyzeDataFlowPass.h  AnalyzeDomTreePass.cpp  AnalyzeDomTreePass.h  AnalyzeLoopParamPass.cpp  AnalyzeLoopParamPass.h  AnalyzeLoopPass.cpp  AnalyzeLoopPass.h  AnalyzePointerPass.cpp  AnalyzePointerPass.h  AnalyzeRegionPass.cpp  AnalyzeRegionPass.h  AnalyzeSideEffectPass.cpp  AnalyzeSideEffectPass.h
Compiler2021/pass/debug/: PrintIRPass.cpp  PrintIRPass.h  ResetIRIDPass.cpp  ResetIRIDPass.h
Compiler2021/pass/erase/: EraseCommonExprPass.cpp  EraseCommonExprPass.h  EraseLocalConstantPass.cpp  EraseLocalConstantPass.h  ErasePseudoInstLIRPass.cpp  ErasePseudoInstLIRPass.h  EraseUselessArrayWritePass.cpp  EraseUselessArrayWritePass.h  EraseUselessBlockPass.cpp  EraseUselessBlockPass.h  EraseUselessFunctionPass.cpp  EraseUselessFunctionPass.h  EraseUselessValuePass.cpp  EraseUselessValuePass.h  JumpMergePass.cpp  JumpMergePass.h
Compiler2021/pass/generate/: HIR2MIRPass.cpp  HIR2MIRPass.h  MIR2LIRPass.cpp  MIR2LIRPass.h  RegisterAllocatePass.cpp  RegisterAllocatePass.h  RegisterColoringPass.cpp  RegisterColoringPass.h
Compiler2021/pass/parallel/: AnalyzeParallelFunctionPass.cpp  AnalyzeParallelFunctionPass.h  AnalyzeParallelLoopPass.cpp  AnalyzeParallelLoopPass.h  ExtractMultiCallPass.cpp  ExtractMultiCallPass.h
Compiler2021/pass/transform/: AnalyzeUnwrittenGlobalValuePass.cpp  AnalyzeUnwrittenGlobalValuePass.h  BackwardMovingPass.cpp  BackwardMovingPass.h  ConstantFoldingPass.cpp  ConstantFoldingPass.h  ForwardMovingPass.cpp  ForwardMovingPass.h  InlineFunctionPass.cpp  InlineFunctionPass.h  InstructionFusion.cpp  InstructionFusion.h  InstructionSchedule.cpp  InstructionSchedule.h  LoopUnrollingPass.cpp  LoopUnrollingPass.h  Mem2RegPass.cpp  Mem2RegPass.h  SimplifyConstantArrayPass.cpp  SimplifyConstantArrayPass.h
Compiler2021/utils/: ArrayToMIR.h  AssemblyUtils.cpp  AssemblyUtils.h  BasicBlockUtils.cpp  BasicBlockUtils.h  ConstUtils.cpp  ConstUtils.h  FunctionUtils.cpp  FunctionUtils.h  IRUtils.cpp  IRUtils.h
autotest/: .gitignore  format_test_case.py  test_compile.py  test_gcc.py  test_run.py
